src/test/ui/borrowck/borrowck-local-borrow-outlives-fn.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/borrowck-local-borrow-outlives-fn.rs:2:5
   |
LL |     &x
   |     ^^ borrowed value does not live long enough
LL |
LL | }
   |  -
   |  |
   |  `x` dropped here while still borrowed
   |  borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
